# forenlims

./: .env.example  .gitignore  .i18nignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: DjangoCI.yaml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
accounts/tests/: conftest.py  factories.py  test__accounts_placeholder.py  tests_models.py
audittrail/: apps.py
audittrail/tests/: conftest.py  test_cid_integration.py
core/: asgi.py  settings.py  urls.py  wsgi.py
core/locale/de/LC_MESSAGES/: django.po
core/locale/en/LC_MESSAGES/: django.po
django_forenlims_core/: asgi.py  settings.py  wsgi.py
frontend/src/application/: app.js  turbo_drive.js
frontend/src/controllers/: testing_controller.js
frontend/webpack/: webpack.common.js  webpack.config.dev.js
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
pages/: admin.py  models.py  views.py
pages/templatetags/: language_tags.py
pages/tests/: test_pages_placeholder.py
scripts/: check.py  check_i18n.py  fix.py
templates/: base.html
templates/pages/: home.html
tests/: conftest.py
