[project]
name = "forenlims"
version = "0.1.0"
description = "Laboratory Data Management for Forensic Sciences"
authors = [
    {name = "Daniel Zaumsegel",email = "daniel.zaumsegel@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-allauth (>=65.11.1,<66.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "python-webpack-boilerplate (>=1.0.4,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.13.3"
djlint = "^1.36.4"
git-cliff = "^2.10.0"
pytest = "^8.4.2"
pytest-django = "^4.11.1"
pytest-cov = "^6.3.0"
factory-boy = "^3.3.3"
faker = "^37.6.0"

[tool.ruff]
target-version = "py313"
line-length = 79
indent-width = 4
lint.select = ["E", "F", "W", "ANN", "PL", "RUF", "DJ", "I", "N", "S", "PT",]

extend-exclude = [
  "manage.py",
  "*/migrations/*",
]
lint.extend-ignore = [ "RUF012" ]

[tool.djlint]
profile="django"

[tool.poetry.scripts]
lint-check = "scripts.check:main"
lint-fix = "scripts.fix:main"
